# SignatureScanner

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
CWrapper/: CMakeLists.txt
CWrapper/Include/: SignatureScanner.h
CWrapper/Source/: SignatureScannerWrapper.cpp
Example/: CMakeLists.txt  Main.cpp
Example/C/: Heap.c  Stack.c
Example/CXX/: Main.cpp
Example/Source/: Main.cpp
ExampleC/: Main.c
Include/: SignatureScanner.hpp
Include/SignatureScanner/: PatternSignature.hpp  SignatureScanner.hpp  XRefSignature.hpp
Include/SignatureScanner/detail/: AllMixin.hpp  ArrayInserter.hpp  ByteConverter.hpp  PatternBuilder.hpp  PatternParser.hpp  SignatureConcept.hpp
Modules/Pattern/: CMakeLists.txt
Modules/Pattern/Include/SignatureScanner/: PatternSignature.hpp
Modules/XRef/: CMakeLists.txt
Modules/XRef/Include/SignatureScanner/: XRefSignature.hpp
Source/: Flatten.hpp  IDASignatureScanner.cpp  PatternSignature.cpp  SignatureScanner.cpp  Signatures.cpp  XRefSignature.cpp
Source/Patterns/: Constructors.cpp  Search.cpp
Source/XRef/: Constructors.cpp  Search.cpp
include/: IDASignatureScanner.hpp  SignatureScanner.hpp
